# structur3D

./: .clang-tidy  .gitignore  CMakeLists.txt  schema.sql  structur3d_srctrl.srctrlprj
client-server-test-bench/: CMakeLists.txt  client.cpp  server.cpp
include/data/: Attribute.h  Base.h  Coord.h  Edge.h  Graph.cpp  Graph.h  Name.h  Node.h  Radius.h  SetOp.h  SetOperationType.h  Sphere.h  Timestamp.h  Tree.h
include/db/: Column.h  ColumnDB.h  Database.h  DatabaseImpl.h  DocumentWithName.h  IDWithType.h  NodeType.h  SQLite3Database.h  attribute_priority.h  db_utils.h
include/db/column/: Column.h  ColumnAttribute.h  LWWElementSet.h  LWWRegister.h
include/db/utils/: crdt_utils.h  db_utils.h
include/document/: Document.h  DocumentImpl.h
include/interactor/: Interactor.h  ModularInteractor.h
include/mesh/: Mesh.h  MeshFactory.h  types.h
include/utils/: Overloaded.h  Serializator.h  Tool.h  approximately_equal.h  attribute_serialization.h  random_string.h  to_underlying.h
include/vm/: Viewmodel.h  ViewmodelImpl.h
include/wire/: ClientEndpoint.h  ClientImpl.h  Message.h  Network.h  NetworkImpl.h  Payload.h  Server.h  ServerController.h
scripts/: sqlite2cpp.py
src/: version.c
src/base/: Radius.cpp  SetOperationType.cpp
src/data/: Coord.cpp  Graph.cpp  Name.cpp  Radius.cpp  Timestamp.cpp
src/db/: DatabaseImpl.cpp  NodeType.cpp  SQLite3Database.cpp  attribute_priority.cpp  db_utils.cpp
src/db/utils/: db_utils.cpp
src/document/: DocumentImpl.cpp
src/interactor/: ModularInteractor.cpp
src/mesh/: Mesh.cpp  MeshFactory.cpp
src/utils/: approximately_equal.cpp  random_string.cpp
src/vm/: ViewmodelImpl.cpp
src/wire/: ClientImpl.cpp  NetworkImpl.cpp  ServerController.cpp
test/: CMakeLists.txt
test/googletest/googletest/docs/: advanced.md
test/src/: main.cpp
test/src/data/: graphTests.cpp  setOperationTypeTests.cpp  tests.cpp
test/src/database/: databaseTests.cpp  properties.cpp  property_columndb.cpp  property_preferred_commutative.cpp  test.cpp  unit_column.cpp  unit_columndb.cpp  unit_columndb_lwwelementset.cpp  unit_columndb_lwwregister.cpp  units.cpp
test/src/document/: documentTests.cpp
test/src/serialization/: property_serialization.cpp  unit_serialization.cpp
test/src/vm/: interaction_through_document.cpp  vmTests.cpp
test/src/wire/: client.cpp  unit_server.cpp
